--- a/index.html
+++ b/index.html
@@ -4,31 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Genrator </title>
     <link rel="stylesheet" href="assest/style.css">
 </head>
 <body>
   <main id = "main">
-<h1>password Generator </h1>
-<section  id ="box">
-<div id ="generatebox">
+                      <h1>password Generator </h1>
+      <section  id ="box">
+          <div id ="generatebox">
 
-<h1>Generate a Password</h1>
-<section id="password">
-<p>your secure password</p></section>
-<button id ="click"  class="Btn">Ganarate Password  </button>
+            <h1>Generate a Password</h1>
+      <section id="center">
+            <textarea id="password"  placeholder="secure your password" aria-label="generate password"></textarea>
+      </section>
+            <button id ="generate" class="Btn" > Generate Button</button>
 
-
-
-</div>
-
-
+          </div>
   </main> 
-
-
-
-
-
-<script src="index.js"></script>
+    <script src="assest/index.js"></script>
 </body>
 </html>
