issue done with button and added comments

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section id="center">
             <textarea id="password"  placeholder="secure your password" aria-label="generate password"></textarea>
       </section>
-            <button id ="generate" class="Btn" > Generate Button</button>
+            <button id ="generate" onclick="alphabets()" > Generate Button</button>
 
           </div>
   </main> 
