--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Genrator </title>
-    <link rel="stylesheet" href="assest/style.css">
+    <link rel="stylesheet" href="assest/css/style.css">
 </head>
 <body>
-  <main id = "main">
-                      <h1>password Generator </h1>
-      <section  id ="box">
-          <div id ="generatebox">
-
-            <h1>Generate a Password</h1>
-      <section id="center">
-            <textarea id="password"  placeholder="secure your password" aria-label="generate password"></textarea>
-      </section>
-            <button id ="generate" > Generate Button</button>
-
-          </div>
-  </main> 
-    <script src="assest/index.js"></script>
+  <div class="wrapper">
+    <header>
+      <h1>Password Generator</h1>
+    </header>
+    <div class="card">
+      <div class="card-header">
+        <h2>Generate a Password</h2>
+      </div>
+      <div class="card-body">
+        <textarea
+          readonly
+          id="password"
+          placeholder="Your Secure Password"
+          aria-label="Generated Password"
+        ></textarea>
+      </div>
+      <div class="card-footer">
+        <button id="generate" class="btn">Generate Password</button>
+      </div>
+    </div>
+  </div>
+    <script src="assest/js/index.js"></script>
 </body>
 </html>
